[package]
name = "solana-trade-router"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_trade_router"

default = ["no_jemalloc"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
no_jemalloc = []

[dependencies]
anchor-lang = "0.30.1"
serum_dex = { path = "../../../serum-dex/dex", default-features = false, features = ["program"]  }
jemallocator = { version = "0.3", optional = true }

[profile.release]
lto = true
